--- a/src/app/business/pages/dashboard/components/degree-process-cards/degree-process-cards.component.html
+++ b/src/app/business/pages/dashboard/components/degree-process-cards/degree-process-cards.component.html
@@ -14,7 +14,7 @@
                     class="flex align-items-center justify-content-center bg-blue-100 border-round"
                     [ngStyle]="{ width: '2.5rem', height: '2.5rem' }"
                 >
-                    <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
+                    <i class="pi pi-file text-blue-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">{{data.inscriptions.approved}} </span>
@@ -39,7 +39,7 @@
                     class="flex align-items-center justify-content-center bg-orange-100 border-round"
                     [ngStyle]="{ width: '2.5rem', height: '2.5rem' }"
                 >
-                    <i class="pi pi-map-marker text-orange-500 text-xl"></i>
+                    <i class="pi pi-file-import text-orange-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">{{data.advisories.approved}} </span>
@@ -65,7 +65,7 @@
                     class="flex align-items-center justify-content-center bg-cyan-100 border-round"
                     [ngStyle]="{ width: '2.5rem', height: '2.5rem' }"
                 >
-                    <i class="pi pi-inbox text-cyan-500 text-xl"></i>
+                    <i class="pi pi-file-export text-cyan-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">{{data.reviews.approved}} </span>
@@ -91,7 +91,7 @@
                     class="flex align-items-center justify-content-center bg-purple-100 border-round"
                     [ngStyle]="{ width: '2.5rem', height: '2.5rem' }"
                 >
-                    <i class="pi pi-comment text-purple-500 text-xl"></i>
+                    <i class="pi pi-fw pi-graduation-cap text-purple-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">{{data.presentations.approved}} </span>
