--- a/src/app/business/pages/dashboard/dashboard.component.html
+++ b/src/app/business/pages/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div class="grid">
-    
-    <app-degree-process-cards class="grid w-full"></app-degree-process-cards>
+    <app-degree-process-cards
+        class="w-full"
+        style="justify-content: center; display: flex; flex-wrap: wrap"
+    ></app-degree-process-cards>
 
     <div class="col-12 xl:col-6">
         <div class="card">
